Revert fix product card price alignment

--- a/src/postcss/woocommerce/grid.css
+++ b/src/postcss/woocommerce/grid.css
@@ -322,6 +322,7 @@
     color: var(--primary);
 
     & del {
+      margin-right: 0.5em;
       color: var(--dark);
       font-weight: var(--font-normal);
       opacity: 0.75;
@@ -329,16 +330,6 @@
 
     @media (--m) {
       display: inline-block;
-    }
-
-    & .product-price {
-      display: inline-flex;
-      flex-wrap: wrap;
-      flex-direction: row-reverse;
-
-      & del {
-        margin-left: 0.5em;
-      }
     }
   }
 
